--- a/game_display.html
+++ b/game_display.html
@@ -65,19 +65,19 @@
 <td class="in_stock">True</td>
 </tr>
 <tr class="game">
-<td class="gid">25284090</td>
-<td class="title">Horizon: Zero Dawn Collector's Edition</td>
-<td class="price">$229.99</td>
-<td class="cls">Pending Classification</td>
-<td class="release_date">March 1st, 2017</td>
-<td class="in_stock">False</td>
-</tr>
-<tr class="game">
 <td class="gid">25246494</td>
 <td class="title">God Eater 2: Rage Burst (Includes God Eater Resurrection)</td>
 <td class="price">$109.99</td>
 <td class="cls">Pending Classification</td>
 <td class="release_date">August 30th, 2016</td>
+<td class="in_stock">False</td>
+</tr>
+<tr class="game">
+<td class="gid">25284090</td>
+<td class="title">Horizon: Zero Dawn Collector's Edition</td>
+<td class="price">$229.99</td>
+<td class="cls">Pending Classification</td>
+<td class="release_date">March 1st, 2017</td>
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
@@ -113,14 +113,6 @@
 <td class="in_stock">True</td>
 </tr>
 <tr class="game">
-<td class="gid">25522427</td>
-<td class="title">Star Ocean V: Integrity & Faithlessness</td>
-<td class="price">$99.99</td>
-<td class="cls">Parental Guidance Recommended</td>
-<td class="release_date">July 1st, 2016</td>
-<td class="in_stock">True</td>
-</tr>
-<tr class="game">
 <td class="gid">23020457</td>
 <td class="title">Tales of Zestiria</td>
 <td class="price">$109.99</td>
@@ -129,12 +121,12 @@
 <td class="in_stock">True</td>
 </tr>
 <tr class="game">
-<td class="gid">25292455</td>
-<td class="title">The Last Guardian Collector's Edition</td>
-<td class="price">$229.99</td>
-<td class="cls">Pending Classification</td>
-<td class="release_date">October 26th, 2016</td>
-<td class="in_stock">False</td>
+<td class="gid">25522427</td>
+<td class="title">Star Ocean V: Integrity & Faithlessness</td>
+<td class="price">$99.99</td>
+<td class="cls">Parental Guidance Recommended</td>
+<td class="release_date">July 1st, 2016</td>
+<td class="in_stock">True</td>
 </tr>
 <tr class="game">
 <td class="gid">25292744</td>
@@ -142,6 +134,14 @@
 <td class="price">$99.99</td>
 <td class="cls">Pending Classification</td>
 <td class="release_date">February 14th, 2017</td>
+<td class="in_stock">False</td>
+</tr>
+<tr class="game">
+<td class="gid">25292455</td>
+<td class="title">The Last Guardian Collector's Edition</td>
+<td class="price">$229.99</td>
+<td class="cls">Pending Classification</td>
+<td class="release_date">October 26th, 2016</td>
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
@@ -217,19 +217,19 @@
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
-<td class="gid">21039720</td>
-<td class="title">Includes Diablo III + Reaper of Souls expansion</td>
-<td class="price">$69.99</td>
-<td class="cls">Restricted 13</td>
-<td class="release_date">August 19th, 2014</td>
-<td class="in_stock">True</td>
-</tr>
-<tr class="game">
 <td class="gid">23011227</td>
 <td class="title">The Technomancer</td>
 <td class="price">$109.99</td>
 <td class="cls">Restricted 13</td>
 <td class="release_date">June 24th, 2016</td>
+<td class="in_stock">True</td>
+</tr>
+<tr class="game">
+<td class="gid">21039720</td>
+<td class="title">Includes Diablo III + Reaper of Souls expansion</td>
+<td class="price">$69.99</td>
+<td class="cls">Restricted 13</td>
+<td class="release_date">August 19th, 2014</td>
 <td class="in_stock">True</td>
 </tr>
 <tr class="game">
@@ -337,11 +337,11 @@
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
-<td class="gid">25694408</td>
-<td class="title">Warhammer: End Time Vermintide</td>
-<td class="price">$79.99</td>
-<td class="cls">Pending Classification</td>
-<td class="release_date">October 4th, 2016</td>
+<td class="gid">21461023</td>
+<td class="title">Dragon Age: Inquisition</td>
+<td class="price">$49.99</td>
+<td class="cls">Restricted 13</td>
+<td class="release_date">November 20th, 2014</td>
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
@@ -353,19 +353,19 @@
 <td class="in_stock">True</td>
 </tr>
 <tr class="game">
-<td class="gid">24362900</td>
-<td class="title">Megadimension Neptunia VII</td>
-<td class="price">$109.99</td>
-<td class="cls">undefined</td>
-<td class="release_date">February 16th, 2016</td>
-<td class="in_stock">True</td>
-</tr>
-<tr class="game">
 <td class="gid">24165038</td>
 <td class="title">This War Of Mine: The Little Ones</td>
 <td class="price">$59.99</td>
 <td class="cls">Restricted 13</td>
 <td class="release_date">February 12th, 2016</td>
+<td class="in_stock">True</td>
+</tr>
+<tr class="game">
+<td class="gid">24362900</td>
+<td class="title">Megadimension Neptunia VII</td>
+<td class="price">$109.99</td>
+<td class="cls">undefined</td>
+<td class="release_date">February 16th, 2016</td>
 <td class="in_stock">True</td>
 </tr>
 <tr class="game">
@@ -377,19 +377,19 @@
 <td class="in_stock">True</td>
 </tr>
 <tr class="game">
-<td class="gid">25245587</td>
-<td class="title">Agatha Christie: The ABC Murders</td>
-<td class="price">$89.99</td>
-<td class="cls">Parental Guidance Recommended</td>
-<td class="release_date">February 26th, 2016</td>
-<td class="in_stock">True</td>
-</tr>
-<tr class="game">
 <td class="gid">22994081</td>
 <td class="title">Dark Souls 2: Scholar of the First Sin</td>
 <td class="price">$89.99</td>
 <td class="cls">Mature Audience</td>
 <td class="release_date">April 2nd, 2015</td>
+<td class="in_stock">True</td>
+</tr>
+<tr class="game">
+<td class="gid">25245587</td>
+<td class="title">Agatha Christie: The ABC Murders</td>
+<td class="price">$89.99</td>
+<td class="cls">Parental Guidance Recommended</td>
+<td class="release_date">February 26th, 2016</td>
 <td class="in_stock">True</td>
 </tr>
 <tr class="game">
@@ -449,11 +449,11 @@
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
-<td class="gid">23017093</td>
-<td class="title">Final Fantasy XIV: Heavensward</td>
-<td class="price">$79.99</td>
-<td class="cls">Parental Guidance Recommended</td>
-<td class="release_date">June 23rd, 2015</td>
+<td class="gid">21461191</td>
+<td class="title">Kingdom Hearts III</td>
+<td class="price">$99.99</td>
+<td class="cls">Pending Classification</td>
+<td class="release_date">Date to be confirmed</td>
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
@@ -465,11 +465,11 @@
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
-<td class="gid">21461191</td>
-<td class="title">Kingdom Hearts III</td>
-<td class="price">$99.99</td>
-<td class="cls">Pending Classification</td>
-<td class="release_date">Date to be confirmed</td>
+<td class="gid">23017093</td>
+<td class="title">Final Fantasy XIV: Heavensward</td>
+<td class="price">$79.99</td>
+<td class="cls">Parental Guidance Recommended</td>
+<td class="release_date">June 23rd, 2015</td>
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
@@ -601,20 +601,20 @@
 <td class="in_stock">True</td>
 </tr>
 <tr class="game">
-<td class="gid">24153046</td>
-<td class="title">Life is Strange Limited Edition</td>
-<td class="price">$59.99</td>
-<td class="cls">Restricted 13</td>
-<td class="release_date">January 26th, 2016</td>
-<td class="in_stock">False</td>
-</tr>
-<tr class="game">
 <td class="gid">25022396</td>
 <td class="title">Prison Architect</td>
 <td class="price">$59.99</td>
 <td class="cls">Mature Audience</td>
 <td class="release_date">June 29th, 2016</td>
 <td class="in_stock">True</td>
+</tr>
+<tr class="game">
+<td class="gid">24153046</td>
+<td class="title">Life is Strange Limited Edition</td>
+<td class="price">$59.99</td>
+<td class="cls">Restricted 13</td>
+<td class="release_date">January 26th, 2016</td>
+<td class="in_stock">False</td>
 </tr>
 <tr class="game">
 <td class="gid">25755189</td>
@@ -777,14 +777,6 @@
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
-<td class="gid">23019781</td>
-<td class="title">Disgaea 5: Alliance of Vengeance</td>
-<td class="price">$89.99</td>
-<td class="cls">Mature Audience</td>
-<td class="release_date">October 16th, 2015</td>
-<td class="in_stock">False</td>
-</tr>
-<tr class="game">
 <td class="gid">23016283</td>
 <td class="title">Putty Squad</td>
 <td class="price">$49.99</td>
@@ -831,6 +823,14 @@
 <td class="cls">Restricted 16</td>
 <td class="release_date">March 26th, 2015</td>
 <td class="in_stock">True</td>
+</tr>
+<tr class="game">
+<td class="gid">23019781</td>
+<td class="title">Disgaea 5: Alliance of Vengeance</td>
+<td class="price">$89.99</td>
+<td class="cls">Mature Audience</td>
+<td class="release_date">October 16th, 2015</td>
+<td class="in_stock">False</td>
 </tr>
 <tr class="game">
 <td class="gid">22995284</td>
