--- a/game_display.html
+++ b/game_display.html
@@ -97,19 +97,19 @@
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
-<td class="gid">23016262</td>
-<td class="title">Final Fantasy X / X-2 HD Remaster</td>
-<td class="price">$89.99</td>
-<td class="cls">Mature Audience</td>
-<td class="release_date">May 14th, 2015</td>
-<td class="in_stock">True</td>
-</tr>
-<tr class="game">
 <td class="gid">23004838</td>
 <td class="title">Dragon Quest Heroes Day One Edition</td>
 <td class="price">$69.99</td>
 <td class="cls">Mature Audience</td>
 <td class="release_date">October 16th, 2015</td>
+<td class="in_stock">True</td>
+</tr>
+<tr class="game">
+<td class="gid">23016262</td>
+<td class="title">Final Fantasy X / X-2 HD Remaster</td>
+<td class="price">$89.99</td>
+<td class="cls">Mature Audience</td>
+<td class="release_date">May 14th, 2015</td>
 <td class="in_stock">True</td>
 </tr>
 <tr class="game">
@@ -129,19 +129,19 @@
 <td class="in_stock">True</td>
 </tr>
 <tr class="game">
-<td class="gid">25292744</td>
-<td class="title">Persona 5</td>
-<td class="price">$99.99</td>
-<td class="cls">Pending Classification</td>
-<td class="release_date">February 14th, 2017</td>
-<td class="in_stock">False</td>
-</tr>
-<tr class="game">
 <td class="gid">25292455</td>
 <td class="title">The Last Guardian Collector's Edition</td>
 <td class="price">$229.99</td>
 <td class="cls">Pending Classification</td>
 <td class="release_date">October 26th, 2016</td>
+<td class="in_stock">False</td>
+</tr>
+<tr class="game">
+<td class="gid">25292744</td>
+<td class="title">Persona 5</td>
+<td class="price">$99.99</td>
+<td class="cls">Pending Classification</td>
+<td class="release_date">February 14th, 2017</td>
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
@@ -161,19 +161,19 @@
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
-<td class="gid">25292542</td>
-<td class="title">South Park: The Fractured But Whole Gold Edition</td>
-<td class="price">$149.99</td>
-<td class="cls">Pending Classification</td>
-<td class="release_date">December 6th, 2016</td>
-<td class="in_stock">False</td>
-</tr>
-<tr class="game">
 <td class="gid">24348457</td>
 <td class="title">Gravity Rush</td>
 <td class="price">$49.99</td>
 <td class="cls">Parental Guidance Recommended</td>
 <td class="release_date">February 2nd, 2016</td>
+<td class="in_stock">False</td>
+</tr>
+<tr class="game">
+<td class="gid">25292542</td>
+<td class="title">South Park: The Fractured But Whole Gold Edition</td>
+<td class="price">$149.99</td>
+<td class="cls">Pending Classification</td>
+<td class="release_date">December 6th, 2016</td>
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
@@ -217,19 +217,19 @@
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
-<td class="gid">23011227</td>
-<td class="title">The Technomancer</td>
-<td class="price">$109.99</td>
-<td class="cls">Restricted 13</td>
-<td class="release_date">June 24th, 2016</td>
-<td class="in_stock">True</td>
-</tr>
-<tr class="game">
 <td class="gid">21039720</td>
 <td class="title">Includes Diablo III + Reaper of Souls expansion</td>
 <td class="price">$69.99</td>
 <td class="cls">Restricted 13</td>
 <td class="release_date">August 19th, 2014</td>
+<td class="in_stock">True</td>
+</tr>
+<tr class="game">
+<td class="gid">23011227</td>
+<td class="title">The Technomancer</td>
+<td class="price">$109.99</td>
+<td class="cls">Restricted 13</td>
+<td class="release_date">June 24th, 2016</td>
 <td class="in_stock">True</td>
 </tr>
 <tr class="game">
@@ -305,19 +305,19 @@
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
-<td class="gid">24126488</td>
-<td class="title">Detroit: Become Human</td>
-<td class="price">$99.99</td>
-<td class="cls">Pending Classification</td>
-<td class="release_date">Date to be confirmed</td>
-<td class="in_stock">False</td>
-</tr>
-<tr class="game">
 <td class="gid">25567182</td>
 <td class="title">includes Base game + 4 DLC game packs</td>
 <td class="price">$119.99</td>
 <td class="cls">Mature Audience</td>
 <td class="release_date">September 9th, 2016</td>
+<td class="in_stock">False</td>
+</tr>
+<tr class="game">
+<td class="gid">24126488</td>
+<td class="title">Detroit: Become Human</td>
+<td class="price">$99.99</td>
+<td class="cls">Pending Classification</td>
+<td class="release_date">Date to be confirmed</td>
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
@@ -329,19 +329,19 @@
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
-<td class="gid">21461023</td>
-<td class="title">Dragon Age: Inquisition</td>
-<td class="price">$49.99</td>
-<td class="cls">Restricted 13</td>
-<td class="release_date">November 20th, 2014</td>
+<td class="gid">25694408</td>
+<td class="title">Warhammer: End Time Vermintide</td>
+<td class="price">$79.99</td>
+<td class="cls">Pending Classification</td>
+<td class="release_date">October 4th, 2016</td>
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
-<td class="gid">21461023</td>
-<td class="title">Dragon Age: Inquisition</td>
-<td class="price">$49.99</td>
-<td class="cls">Restricted 13</td>
-<td class="release_date">November 20th, 2014</td>
+<td class="gid">25694408</td>
+<td class="title">Warhammer: End Time Vermintide</td>
+<td class="price">$79.99</td>
+<td class="cls">Pending Classification</td>
+<td class="release_date">October 4th, 2016</td>
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
@@ -353,11 +353,11 @@
 <td class="in_stock">True</td>
 </tr>
 <tr class="game">
-<td class="gid">24165038</td>
-<td class="title">This War Of Mine: The Little Ones</td>
-<td class="price">$59.99</td>
-<td class="cls">Restricted 13</td>
-<td class="release_date">February 12th, 2016</td>
+<td class="gid">25165062</td>
+<td class="title">Sherlock Holmes: The Devil’s Daughter</td>
+<td class="price">$109.99</td>
+<td class="cls">Mature Audience</td>
+<td class="release_date">June 10th, 2016</td>
 <td class="in_stock">True</td>
 </tr>
 <tr class="game">
@@ -369,19 +369,11 @@
 <td class="in_stock">True</td>
 </tr>
 <tr class="game">
-<td class="gid">25165062</td>
-<td class="title">Sherlock Holmes: The Devil’s Daughter</td>
-<td class="price">$109.99</td>
-<td class="cls">Mature Audience</td>
-<td class="release_date">June 10th, 2016</td>
-<td class="in_stock">True</td>
-</tr>
-<tr class="game">
-<td class="gid">22994081</td>
-<td class="title">Dark Souls 2: Scholar of the First Sin</td>
-<td class="price">$89.99</td>
-<td class="cls">Mature Audience</td>
-<td class="release_date">April 2nd, 2015</td>
+<td class="gid">24165038</td>
+<td class="title">This War Of Mine: The Little Ones</td>
+<td class="price">$59.99</td>
+<td class="cls">Restricted 13</td>
+<td class="release_date">February 12th, 2016</td>
 <td class="in_stock">True</td>
 </tr>
 <tr class="game">
@@ -393,6 +385,14 @@
 <td class="in_stock">True</td>
 </tr>
 <tr class="game">
+<td class="gid">22994081</td>
+<td class="title">Dark Souls 2: Scholar of the First Sin</td>
+<td class="price">$89.99</td>
+<td class="cls">Mature Audience</td>
+<td class="release_date">April 2nd, 2015</td>
+<td class="in_stock">True</td>
+</tr>
+<tr class="game">
 <td class="gid">24348698</td>
 <td class="title">Ni no Kuni II: Revenant Kingdom</td>
 <td class="price">TBC</td>
@@ -401,19 +401,19 @@
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
-<td class="gid">25249656</td>
-<td class="title">Dragon Quest Builders Day One Edition</td>
-<td class="price">$99.99</td>
-<td class="cls">Parental Guidance Recommended</td>
-<td class="release_date">October 13th, 2016</td>
-<td class="in_stock">False</td>
-</tr>
-<tr class="game">
 <td class="gid">25248049</td>
 <td class="title">PSYCHO-PASS: Mandatory Happiness Limited Edition</td>
 <td class="price">$149.99</td>
 <td class="cls">Mature Audience</td>
 <td class="release_date">September 16th, 2016</td>
+<td class="in_stock">False</td>
+</tr>
+<tr class="game">
+<td class="gid">25249656</td>
+<td class="title">Dragon Quest Builders Day One Edition</td>
+<td class="price">$99.99</td>
+<td class="cls">Parental Guidance Recommended</td>
+<td class="release_date">October 13th, 2016</td>
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
@@ -449,11 +449,11 @@
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
-<td class="gid">21461191</td>
-<td class="title">Kingdom Hearts III</td>
-<td class="price">$99.99</td>
-<td class="cls">Pending Classification</td>
-<td class="release_date">Date to be confirmed</td>
+<td class="gid">23017093</td>
+<td class="title">Final Fantasy XIV: Heavensward</td>
+<td class="price">$79.99</td>
+<td class="cls">Parental Guidance Recommended</td>
+<td class="release_date">June 23rd, 2015</td>
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
@@ -465,11 +465,11 @@
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
-<td class="gid">23017093</td>
-<td class="title">Final Fantasy XIV: Heavensward</td>
-<td class="price">$79.99</td>
-<td class="cls">Parental Guidance Recommended</td>
-<td class="release_date">June 23rd, 2015</td>
+<td class="gid">21461191</td>
+<td class="title">Kingdom Hearts III</td>
+<td class="price">$99.99</td>
+<td class="cls">Pending Classification</td>
+<td class="release_date">Date to be confirmed</td>
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
@@ -585,27 +585,11 @@
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
-<td class="gid">24106540</td>
-<td class="title">Bloodborne Game of the Year Edition</td>
-<td class="price">$99.99</td>
-<td class="cls">Restricted 16</td>
-<td class="release_date">November 25th, 2015</td>
-<td class="in_stock">False</td>
-</tr>
-<tr class="game">
 <td class="gid">24862094</td>
 <td class="title">Nights of Azure</td>
 <td class="price">$109.99</td>
 <td class="cls">Mature Audience</td>
 <td class="release_date">April 1st, 2016</td>
-<td class="in_stock">True</td>
-</tr>
-<tr class="game">
-<td class="gid">25022396</td>
-<td class="title">Prison Architect</td>
-<td class="price">$59.99</td>
-<td class="cls">Mature Audience</td>
-<td class="release_date">June 29th, 2016</td>
 <td class="in_stock">True</td>
 </tr>
 <tr class="game">
@@ -617,12 +601,28 @@
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
+<td class="gid">24106540</td>
+<td class="title">Bloodborne Game of the Year Edition</td>
+<td class="price">$99.99</td>
+<td class="cls">Restricted 16</td>
+<td class="release_date">November 25th, 2015</td>
+<td class="in_stock">False</td>
+</tr>
+<tr class="game">
 <td class="gid">25755189</td>
 <td class="title">Zenith</td>
 <td class="price">$49.99</td>
 <td class="cls">Mature Audience</td>
 <td class="release_date">September 23rd, 2016</td>
 <td class="in_stock">False</td>
+</tr>
+<tr class="game">
+<td class="gid">25022396</td>
+<td class="title">Prison Architect</td>
+<td class="price">$59.99</td>
+<td class="cls">Mature Audience</td>
+<td class="release_date">June 29th, 2016</td>
+<td class="in_stock">True</td>
 </tr>
 <tr class="game">
 <td class="gid">25174401</td>
@@ -673,20 +673,20 @@
 <td class="in_stock">True</td>
 </tr>
 <tr class="game">
-<td class="gid">22463714</td>
-<td class="title">The Walking Dead: Season Two</td>
-<td class="price">$69.99</td>
-<td class="cls">Restricted 16</td>
-<td class="release_date">October 31st, 2014</td>
-<td class="in_stock">False</td>
-</tr>
-<tr class="game">
 <td class="gid">23006261</td>
 <td class="title">Stick It To The Man</td>
 <td class="price">$49.99</td>
 <td class="cls">undefined</td>
 <td class="release_date">March 12th, 2015</td>
 <td class="in_stock">True</td>
+</tr>
+<tr class="game">
+<td class="gid">22463714</td>
+<td class="title">The Walking Dead: Season Two</td>
+<td class="price">$69.99</td>
+<td class="cls">Restricted 16</td>
+<td class="release_date">October 31st, 2014</td>
+<td class="in_stock">False</td>
 </tr>
 <tr class="game">
 <td class="gid">23006410</td>
@@ -705,19 +705,19 @@
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
-<td class="gid">24535491</td>
-<td class="title">Republique</td>
-<td class="price">$59.99</td>
-<td class="cls">Pending Classification</td>
-<td class="release_date">March 23rd, 2016</td>
-<td class="in_stock">False</td>
-</tr>
-<tr class="game">
 <td class="gid">23056865</td>
 <td class="title">Broken Sword 5: The Serpent's Curse</td>
 <td class="price">$49.99</td>
 <td class="cls">Parental Guidance Recommended</td>
 <td class="release_date">October 16th, 2015</td>
+<td class="in_stock">False</td>
+</tr>
+<tr class="game">
+<td class="gid">24535491</td>
+<td class="title">Republique</td>
+<td class="price">$59.99</td>
+<td class="cls">Pending Classification</td>
+<td class="release_date">March 23rd, 2016</td>
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
@@ -841,20 +841,20 @@
 <td class="in_stock">False</td>
 </tr>
 <tr class="game">
-<td class="gid">23016366</td>
-<td class="title">Awesomenauts Assemble</td>
-<td class="price">$69.99</td>
-<td class="cls">undefined</td>
-<td class="release_date">February 6th, 2015</td>
-<td class="in_stock">False</td>
-</tr>
-<tr class="game">
 <td class="gid">23061799</td>
 <td class="title">Shovel Knight</td>
 <td class="price">$59.99</td>
 <td class="cls">undefined</td>
 <td class="release_date">November 6th, 2015</td>
 <td class="in_stock">True</td>
+</tr>
+<tr class="game">
+<td class="gid">23016366</td>
+<td class="title">Awesomenauts Assemble</td>
+<td class="price">$69.99</td>
+<td class="cls">undefined</td>
+<td class="release_date">February 6th, 2015</td>
+<td class="in_stock">False</td>
 </tr>
 <tr class="game">
 <td class="gid">23009134</td>
