--- a/game_display.html
+++ b/game_display.html
@@ -10,11 +10,11 @@
 <table id="table-1">
 <tr>
 <th>No.</th>
-<th>game_ID</th>
-<th>title</th>
-<th>price</th>
+<th>Game_ID</th>
+<th>Title</th>
+<th>rice</th>
 <th>CLS</th>
-<th>release_date</th>
+<th>elease_date</th>
 <th>in_Stock</th>
 </tr>
 <tr class="game">
@@ -892,3 +892,4 @@
 </table>
 </div>
 </body>
+</html>
